game/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itch150
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/preserve_host_header: "true"
    ingress.pomerium.io/allow_websockets: "true"
    ingress.pomerium.io/allow_public_unauthenticated_access: "true"
spec:
  ingressClassName: pomerium
  rules:
    - host: "bigasterisk.com"
      http:
        paths:
          - pathType: Prefix
            path: /umbraluna/
            backend: { service: { name: itch150, port: { number: 80 } } }
  tls:
    - hosts: [bigasterisk.com]
      secretName: bigasterisk.com-tls
